{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 27,
  "lineage": "8dc68b98-397b-a405-127e-47a4148bfab7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:internet-gateway/igw-07d26ad26bbc761f6",
            "id": "igw-07d26ad26bbc761f6",
            "owner_id": "116981775264",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-lab-igw"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-igw"
            },
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:loadbalancer/app/ecs-fargate-lab-alb/51097ae172032eb8",
            "arn_suffix": "app/ecs-fargate-lab-alb/51097ae172032eb8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-fargate-lab-alb-1574663482.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116981775264:loadbalancer/app/ecs-fargate-lab-alb/51097ae172032eb8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-fargate-lab-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-079749f680f3d20b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a0576eeb51c8a5f"
              },
              {
                "subnet_id": "subnet-0486ebed379d3883b"
              }
            ],
            "subnets": [
              "subnet-03a0576eeb51c8a5f",
              "subnet-0486ebed379d3883b"
            ],
            "tags": {
              "Name": "ecs-fargate-lab-alb"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-alb"
            },
            "vpc_id": "vpc-09c425134f7a8edc4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:loadbalancer/app/ecs-fargate-lab-alb/51097ae172032eb8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:listener/app/ecs-fargate-lab-alb/51097ae172032eb8/817fa2eda399b26c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:targetgroup/ecs-fargate-lab-tg/c2ecfa65f340528b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116981775264:listener/app/ecs-fargate-lab-alb/51097ae172032eb8/817fa2eda399b26c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:loadbalancer/app/ecs-fargate-lab-alb/51097ae172032eb8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:listener/app/ecs-fargate-lab-alb/51097ae172032eb8/817fa2eda399b26c"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:targetgroup/ecs-fargate-lab-tg/c2ecfa65f340528b",
            "arn_suffix": "targetgroup/ecs-fargate-lab-tg/c2ecfa65f340528b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116981775264:targetgroup/ecs-fargate-lab-tg/c2ecfa65f340528b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:116981775264:loadbalancer/app/ecs-fargate-lab-alb/51097ae172032eb8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-fargate-lab-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-fargate-lab-tg"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981775264:targetgroup/ecs-fargate-lab-tg/c2ecfa65f340528b"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:route-table/rtb-0218c24e0e6906eb2",
            "id": "rtb-0218c24e0e6906eb2",
            "owner_id": "116981775264",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d26ad26bbc761f6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-lab-public-rt"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "rtb-0218c24e0e6906eb2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b790aa74dc533fb",
            "region": "us-east-1",
            "route_table_id": "rtb-0218c24e0e6906eb2",
            "subnet_id": "subnet-03a0576eeb51c8a5f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "rtbassoc-08b790aa74dc533fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017b1b13b64e57c7f",
            "region": "us-east-1",
            "route_table_id": "rtb-0218c24e0e6906eb2",
            "subnet_id": "subnet-0486ebed379d3883b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "rtbassoc-017b1b13b64e57c7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:security-group/sg-079749f680f3d20b4",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079749f680f3d20b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-fargate-lab-alb-sg",
            "name_prefix": "",
            "owner_id": "116981775264",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-lab-alb-sg"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "sg-079749f680f3d20b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:security-group/sg-01216d1071f6b130f",
            "description": "ECS service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01216d1071f6b130f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from ALB only",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079749f680f3d20b4"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-fargate-lab-ecs-sg",
            "name_prefix": "",
            "owner_id": "116981775264",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-lab-ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "sg-01216d1071f6b130f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:subnet/subnet-03a0576eeb51c8a5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a0576eeb51c8a5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116981775264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-lab-public-1"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-public-1"
            },
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "subnet-03a0576eeb51c8a5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:subnet/subnet-0486ebed379d3883b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0486ebed379d3883b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116981775264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-lab-public-2"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-public-2"
            },
            "vpc_id": "vpc-09c425134f7a8edc4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "subnet-0486ebed379d3883b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981775264:vpc/vpc-09c425134f7a8edc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a59917262111d5c3",
            "default_route_table_id": "rtb-0169f8b1a04d71c42",
            "default_security_group_id": "sg-0652c224d47006fe9",
            "dhcp_options_id": "dopt-0e6e9269a3c5210f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c425134f7a8edc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0169f8b1a04d71c42",
            "owner_id": "116981775264",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-lab-vpc"
            },
            "tags_all": {
              "Name": "ecs-fargate-lab-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "116981775264",
            "id": "vpc-09c425134f7a8edc4",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}